# cmp-cli

./: Cargo.toml  README.md
src/: main.rs  model.rs
