[package]
name = "cmp_cli"
version = "0.1.0"
authors = ["henzai <ry0chord@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.9.0", features = ["attributes"]}
serde = "1.0.126"
surf = "2.2.0"
